# clankers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  aug.txt  check.txt  data_gen.txt  gemini_report.md  gemini_report_2026-02-28.md  mpc_gait_root_cause_report.md  quadruped_mpc_report.md  task.txt
apps/clankers-app/: Cargo.toml
apps/clankers-app/src/: main.rs
apps/clankers-app/tests/: cli_bench.rs  cli_record.rs  cli_replay.rs  cli_run_scenario.rs  cli_serve_protocol.rs
crates/clankers-actuator/: Cargo.toml
crates/clankers-actuator-core/: Cargo.toml
crates/clankers-actuator-core/src/: control.rs  friction.rs  lib.rs  motor.rs  presets.rs  transmission.rs
crates/clankers-actuator/src/: components.rs  lib.rs  systems.rs
crates/clankers-core/: Cargo.toml
crates/clankers-core/src/: baselines.rs  code_quality_audit.rs  config.rs  domain_rand_spec.rs  env_spec.rs  error.rs  layout.rs  lib.rs  manifest.rs  panic_audit.rs  physics.rs  release.rs  rewards.rs  schema.rs  seed.rs  stability.rs  termination.rs  terminations.rs  test_layers.rs  time.rs  traits.rs  types.rs  unified_config.rs  user_journeys.rs  validators.rs  view.rs
crates/clankers-core/tests/: action_fallible.rs  layout_determinism.rs  schema_roundtrip.rs
crates/clankers-domain-rand/: Cargo.toml
crates/clankers-domain-rand/src/: lib.rs  randomizers.rs  ranges.rs  spec.rs
crates/clankers-env/: Cargo.toml
crates/clankers-env/src/: buffer.rs  episode.rs  lib.rs  parallel_runner.rs  sensors.rs  systems.rs  vec_buffer.rs  vec_env.rs  vec_episode.rs  vec_runner.rs
crates/clankers-env/tests/: observation_view_roundtrip.rs  sensor_integration.rs
crates/clankers-gym/: Cargo.toml
crates/clankers-gym/src/: binary_frame.rs  encoding.rs  env.rs  framing.rs  lib.rs  protocol.rs  server.rs  state_machine.rs  tensor_frame.rs  vec_env.rs
crates/clankers-ik/: Cargo.toml
crates/clankers-ik/src/: chain.rs  lib.rs  plugin.rs  solver.rs
crates/clankers-mpc/: Cargo.toml
crates/clankers-mpc/src/: centroidal.rs  disturbance.rs  gait.rs  lib.rs  plugin.rs  solver.rs  swing.rs  types.rs  wbc.rs
crates/clankers-noise/: Cargo.toml
crates/clankers-noise/src/: lib.rs  model.rs  presets.rs  vector.rs
crates/clankers-physics/: Cargo.toml
crates/clankers-physics/src/: backend.rs  buffers.rs  components.rs  lib.rs  mirror.rs  neutral.rs  plugin.rs  readback.rs  scene_objects.rs  step.rs  systems.rs
crates/clankers-physics/tests/: cartpole_dynamics.rs  motor_coverage.rs
crates/clankers-policy/: Cargo.toml
crates/clankers-policy/src/: integration_tests.rs  lib.rs  onnx.rs  policies.rs  runner.rs
crates/clankers-record/: Cargo.toml
crates/clankers-record/examples/: fixture_gen.rs
crates/clankers-record/src/: async_writer.rs  lib.rs  plugin.rs  recorder.rs  schema.rs  types.rs
crates/clankers-record/tests/: multi_camera_roundtrip.rs  recording_pipeline.rs
crates/clankers-render/: Cargo.toml
crates/clankers-render/src/: buffer.rs  camera.rs  config.rs  depth.rs  depth_material.rs  depth_material.wgsl  lib.rs  readback.rs  segmentation.rs  sensor.rs
crates/clankers-render/tests/: sensor_config.rs
crates/clankers-sim/: Cargo.toml
crates/clankers-sim/src/: builder.rs  headless.rs  integration.rs  lib.rs  (+2 more)
crates/clankers-teleop/: Cargo.toml
crates/clankers-test-utils/: Cargo.toml
crates/clankers-urdf/: Cargo.toml
crates/clankers-viz/: Cargo.toml
examples/: Cargo.toml
examples/examples/: arm_bench.rs  arm_gym.rs  arm_ik.rs  arm_ik_viz.rs  arm_manipulation.rs  arm_pick_gym.rs  arm_pick_record.rs  arm_pick_replay.rs  arm_policy_viz.rs  arm_with_policy.rs  cartpole_gym.rs  cartpole_policy_viz.rs  cartpole_vec_benchmark.rs  cartpole_vec_gym.rs  domain_rand.rs  multi_robot.rs  multi_robot_viz.rs  pendulum_headless.rs  pendulum_viz.rs  quadruped_mpc.rs  quadruped_mpc_bench.rs  quadruped_mpc_viz.rs
examples/python/: gym_client.py
examples/src/: arm_setup.rs  arm_visuals.rs  lib.rs  mpc_control.rs  quadruped_setup.rs
examples/tests/: arm_startup.rs  mpc_walk.rs
examples/urdf/: cartpole.urdf  pendulum.urdf  quadruped.urdf  six_dof_arm.urdf  two_link_arm.urdf
python/: pyproject.toml  requirements-ci.txt  requirements.txt
python/clanker_gym/: __init__.py  client.py  env.py  evaluation.py  goal_env.py  gymnasium_env.py  mcap_loader.py  registration.py  rewards.py  sb3_vec_env.py  spaces.py  terminations.py  vec_env.py  wrappers.py
python/clankers/: __init__.py  _errors.py  client.py  dataset_saver.py  env.py  evaluation.py  goal_env.py  gymnasium_env.py  joint_encoder.py  mcap_loader.py  registration.py  sb3_vec_env.py  spaces.py  tensor_frame.py  trajectory_dataset.py  vec_env.py  vision_dataset.py  vision_model.py  wrappers.py
python/clankers_synthetic/: __init__.py  __main__.py  action_adapter.py  clankers_bridge.py  cli.py  compiler.py  errors.py  ik_solver.py  mcap_writer.py  openai_client.py  packager.py  parser.py  pipeline.py  planner.py  pvcb_refiner.py  pyproject.toml  specs.py  validator.py
python/examples/: arm_imitation_learning.py  cartpole_closed_loop.py  cartpole_parallel_train_ppo.py  cartpole_pd_controller.py  cartpole_play_ppo.py  cartpole_ppo.onnx  cartpole_read_state.py  cartpole_train_ppo.py  cartpole_vec_benchmark.py  eval_pick_policy.py  export_sb3_to_onnx.py  replay_policy.py  train_joint_bc.py  train_ppo.py  train_vision_bc.py
python/tests/: test_arm_dataset_pipeline.py  test_augmentation_palette.py  test_augmentation_pipeline.py  test_augmentation_prompts.py  test_client.py  test_client_protocol_error.py  test_dl_pipeline_e2e.py  test_env.py  test_evaluation.py  test_goal_env.py  test_gymnasium_env.py  test_image_reset_matches_step_shape.py  test_joint_encoder.py  test_mcap_augmentor.py  test_mcap_loader.py  test_registration.py  test_rewards.py  test_sb3_vec_env.py  test_spaces.py  test_synthetic_action_semantics.py  test_tensor_frame.py  test_terminations.py  test_trajectory_dataset.py  test_vec_env.py  test_wrappers.py
xtask/: Cargo.toml
xtask/src/: lib.rs  line_count.rs  main.rs
xtask/tests/: bin_line_count.rs
(+273 files in other folders)
