[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clankers"
version = "0.1.0"
description = "Python client for Clankers simulation training"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
sb3 = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
]
mcap = [
    "mcap>=1.0.0",
]
torch = [
    "torch>=2.0.0",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
]
train = [
    "torch>=2.0.0",
    "onnx>=1.14",
    "onnxruntime>=1.15",
]
cosmos = [
    "huggingface_hub>=0.20",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "RUF022", # __all__ sorted — intentional module grouping
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059"]  # unused unpacked variables common in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gymnasium.*", "stable_baselines3.*", "diffusers.*", "PIL.*", "torch", "torch.*", "onnx", "onnx.*", "onnxruntime", "onnxruntime.*", "huggingface_hub", "huggingface_hub.*"]
ignore_missing_imports = true
