[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clankers*"]
exclude = ["clankers_synthetic*"]

[project]
name = "clankers"
version = "0.1.0"
description = "Python client for Clankers simulation training"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
sb3 = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
]
mcap = [
    "mcap>=1.0.0",
]
torch = [
    "torch>=2.0.0",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
]
train = [
    "torch>=2.0.0",
    "onnx>=1.14",
    "onnxruntime>=1.15",
]
cosmos = [
    "diffusers>=0.37",
    "torch>=2.0.0",
    "accelerate>=0.26",
    "transformers>=4.40",
    "opencv-python>=4.8",
    "sentencepiece>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "RUF022", # __all__ sorted — intentional module grouping
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059"]  # unused unpacked variables common in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gymnasium.*", "stable_baselines3.*", "diffusers.*", "PIL.*", "torch", "torch.*", "onnx", "onnx.*", "onnxruntime", "onnxruntime.*", "huggingface_hub", "huggingface_hub.*", "cv2", "cv2.*"]
ignore_missing_imports = true
