[package]
name = "xtask"
description = "Workspace developer tooling (line-count checks, etc.)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
walkdir = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
