[package]
name = "clankers-app"
description = "Example Clankers robotics simulation application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-sim.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
clankers-gym.workspace = true
bevy.workspace = true
clap.workspace = true

[lints]
workspace = true
