[package]
name = "clankers-app"
description = "Example Clankers robotics simulation application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-sim.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
clankers-gym.workspace = true
clankers-physics.workspace = true
clankers-record.workspace = true
clankers-teleop.workspace = true
mcap = { workspace = true }
csv = { workspace = true }
clankers-urdf.workspace = true
clankers-viz.workspace = true
bevy = { workspace = true, features = ["default"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow = "1"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Criterion target shares the W7 PR4 `bench vec` body with the CLI so
# `cargo bench --bench vec` and `clankers bench vec` produce matching
# numbers. `default-features = false` strips the gnuplot HTML reports
# that would otherwise need a system `gnuplot` install.
criterion = { version = "0.5", default-features = false }

# The bench target lives at the workspace root `benches/vec.rs` per
# LOOPS.yaml loop 6. The path is relative to this Cargo.toml.
[[bench]]
name = "vec"
path = "../../benches/vec.rs"
harness = false

[lints]
workspace = true
