[package]
name = "clankers-actuator-core"
description = "Framework-agnostic motor models, transmission, and friction (no Bevy dependency)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
