[package]
name = "clankers-actuator"
description = "Bevy plugin wrapping clankers-actuator-core for ECS integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-actuator-core.workspace = true
clankers-core.workspace = true
bevy.workspace = true

[lints]
workspace = true
