[package]
name = "clankers-core"
description = "Core types, traits, configuration, timing, and error handling for the Clankers robotics simulation framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { workspace = true }
serde.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
