[package]
name = "clankers-domain-rand"
description = "Physics parameter randomization for sim-to-real transfer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator-core.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
bevy.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
thiserror.workspace = true

[lints]
workspace = true
