[package]
name = "clankers-env"
description = "Environment state management, sensors, and episode lifecycle for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-noise.workspace = true
clankers-actuator.workspace = true
bevy.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[lints]
workspace = true
