[package]
name = "clankers-gym"
description = "TCP server and Gymnasium-compatible training protocol for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
clankers-test-utils.workspace = true

[lints]
workspace = true
