[package]
name = "clankers-mpc"
description = "Centroidal convex MPC and whole-body controller for legged locomotion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
bevy = ["dep:bevy", "dep:clankers-core", "dep:clankers-actuator", "dep:clankers-ik"]

[dependencies]
nalgebra.workspace = true
clarabel.workspace = true
clankers-urdf.workspace = true

# Optional Bevy integration
bevy = { workspace = true, optional = true }
clankers-core = { workspace = true, optional = true }
clankers-actuator = { workspace = true, optional = true }
clankers-ik = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Inherited workspace allows
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
# Relaxed for math-heavy code
doc_markdown = "allow"
cast_precision_loss = "allow"
suboptimal_flops = "allow"
similar_names = "allow"
