[package]
name = "clankers-physics"
description = "Engine-agnostic physics abstraction layer for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator.workspace = true
clankers-urdf.workspace = true
bevy.workspace = true
thiserror.workspace = true

[lints]
workspace = true
