[package]
name = "clankers-policy"
description = "Policy implementations and inference runner for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-env.workspace = true
clankers-actuator.workspace = true
bevy.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ort = { workspace = true, optional = true }
serde_json.workspace = true

[features]
onnx = ["dep:ort"]

[dev-dependencies]
clankers-domain-rand.workspace = true

[lints]
workspace = true
