[package]
name = "clankers-policy"
description = "Policy implementations and inference runner for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-env.workspace = true
clankers-actuator.workspace = true
bevy.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ndarray = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true

[features]
onnx = ["dep:ort", "dep:ndarray"]

[dev-dependencies]
clankers-domain-rand.workspace = true

[lints]
workspace = true
