[package]
name = "clankers-record"
description = "Offline episode recorder writing MCAP files for the Clankers robotics simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
autotests = false

[features]
default = []
camera = ["dep:clankers-render"]

[dependencies]
bevy = { workspace = true, features = ["bevy_log"] }
mcap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clankers-core = { workspace = true }
clankers-actuator = { workspace = true }
clankers-render = { workspace = true, optional = true }
# Direct dep (not workspace-promoted): clankers-record is the only consumer
# in the workspace. The W7 PR4 async recorder writer uses a bounded
# crossbeam queue between the Bevy hot path and the I/O worker thread.
crossbeam-channel = "0.5"

[[test]]
name = "it"
path = "tests/it/main.rs"

[lints]
workspace = true

# Fixture regenerator for `python/tests/fixtures/two_camera.mcap`.
# Gated behind the `camera` feature because it pulls `clankers-render`.
[[example]]
name = "fixture_gen"
required-features = ["camera"]
