[package]
name = "clankers-render"
description = "Headless rendering and GPU-to-CPU image transfer for visual observations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
bevy.workspace = true

[dev-dependencies]
clankers-test-utils.workspace = true

[lints]
workspace = true
