[package]
name = "clankers-render"
description = "Headless rendering and GPU-to-CPU image transfer for visual observations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
## Enables GPU camera rendering: Camera3d offscreen render targets, GPU readback,
## and per-camera frame buffer population. Requires a wgpu-capable GPU backend.
gpu = ["bevy/bevy_render", "bevy/bevy_core_pipeline", "bevy/bevy_pbr"]

[dependencies]
clankers-core.workspace = true
bevy.workspace = true

[dev-dependencies]
clankers-test-utils.workspace = true

[lints]
workspace = true
