[package]
name = "clankers-sim"
description = "Top-level Bevy plugin integrating all Clankers modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
clankers-urdf.workspace = true
bevy.workspace = true

[dev-dependencies]
clankers-test-utils.workspace = true
clankers-policy.workspace = true
clankers-domain-rand.workspace = true

[lints]
workspace = true
