[package]
name = "clankers-teleop"
description = "Manual control interfaces for debugging and teleoperation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
bevy.workspace = true

[dev-dependencies]
clankers-test-utils.workspace = true

[lints]
workspace = true
