[package]
name = "clankers-test-utils"
description = "Shared test fixtures and utilities for Clankers crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
bevy.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[lints]
workspace = true
