[package]
name = "clankers-viz"
description = "Interactive visualization, teleoperation, and policy inspection for Clankers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clankers-core.workspace = true
clankers-actuator.workspace = true
clankers-env.workspace = true
clankers-sim.workspace = true
clankers-policy.workspace = true
clankers-teleop.workspace = true
bevy = { workspace = true, features = ["default"] }
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true

[lints]
workspace = true
