[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clankers-synthetic"
version = "0.1.0"
description = "LLM-driven synthetic trajectory generation for Clankers"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=1.10",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
